--- a/notas/notas.bib
+++ b/notas/notas.bib
@@ -106,6 +106,22 @@
   file = {/Users/abrahamrojasvega/Zotero/storage/VADZBH7A/Hungerford - 1980 - Algebra.pdf}
 }
 
+@book{husemollerFibreBundles1994,
+  title = {Fibre Bundles},
+  author = {Husemöller, Dale},
+  date = {1994},
+  series = {Graduate Texts in Mathematics},
+  edition = {3. ed},
+  number = {20},
+  publisher = {Springer},
+  location = {New York Heidelberg},
+  isbn = {978-0-387-94087-8 978-3-540-94087-6},
+  langid = {english},
+  pagetotal = {353},
+  keywords = {notion},
+  file = {/Users/abrahamrojasvega/Zotero/storage/HFUYAPYD/Husemöller - 1994 - Fibre bundles.pdf}
+}
+
 @book{karoubiContemporaryDevelopmentsAlgebraic2003,
   title = {Contemporary Developments in Algebraic K-Theory: {{School}} on {{Algebraic K-Theory}} and Its {{Applications}}, 8-19 {{July}} 2002; (Dedicated to {{H}}. {{Bass}} on the Occasion of His 70th Birthday)},
   shorttitle = {Contemporary Developments in Algebraic K-Theory},
